# vapc

./: .flake8  .gitignore  .pre-commit-config.yaml  citation.cff  how_to.md  how_to_command_line.md  pyproject.toml  readme.md  requirements-dev.txt  run.py  vasp.yml
.github/workflows/: ci.yml
cmd/templates/: compute_attributes_config.json  filter_and_compute_attributes.json  testing.json  testing_mask.json  testing_subsample.json
command_line_templates/: compute_attributes_config.json  compute_statistics_config.json  filter_and_compute_attributes.json  filter_by_attributes_config.json  mask_config.json  subsample_config.json
demo/: config.json  main.py
docs/source/: basic_tools.rst  build_pipelines.rst  cmd_line.rst  conf.py  faq.rst  index.rst  intro.rst  pipeline_example.nblink  pypeline_1Filter_2Compute.nblink  pypeline_example.nblink  readme_rtd.md  tool_3d_mask.nblink  tool_compute_attributes.nblink  tool_compute_attributes_save_as_ply.nblink  tool_compute_statistics.nblink  tool_filter.nblink  tool_subsample.nblink  tool_voxelize_point_cloud.nblink  vapc.rst
jupyter/: compute_everything.ipynb  compute_point_count.ipynb  compute_point_count_export_as_colorized_ply.ipynb  pipeline_example.ipynb  pipeline_hierarchical_analysis.ipynb  pypeline_1Filter_2Compute.ipynb  pypeline_voxel_based_change_detection.ipynb  tool_3d_mask.ipynb  tool_compute_attribute_save_as_ply.ipynb  tool_compute_attributes.ipynb  tool_compute_mode_count.ipynb  tool_compute_statistics.ipynb  tool_filter.ipynb  tool_subsample.ipynb  tool_voxelize_point_cloud.ipynb
src/vapc/: __init__.py  bi_vapc.py  datahandler.py  las_split_append_merge.py  main.py  utilities.py  vapc.py  vapc_tools.py
src/vasp/: __init__.py  data_handler.py  dev_testing.py  las_split_append_merge.py  main.py  utilities.py  vasp.py  vasp_filter.py  vasp_mask.py  vasp_point_density.py  vasp_subsample.py  vasp_tools.py
templates/: compute_attributes_config.json  compute_statistics_config.json  filter_and_compute_attributes.json  filter_by_attributes_config.json  mask_config.json  subsample_config.json
test/test_data/: vasp_in.laz
test_data/: vasp_in.laz  vasp_out.laz  vasp_reference.laz
tests/: test_compute.py  test_data_handler.py  test_tile.py  test_voxel.py
tests/integration_tests/: test_io.py  test_las.py  test_main.py  test_templates.py
tests/test_data/: als_multichannel_leg000_points.laz  small_mask.laz  tree_wind_condition.laz  vapc_in.laz  vasp_in.laz
