# This section provides general project metadata that is used across
# a variety of build tools. Notably, the version specified here is the
# single source of truth for vapc's version

[project]
name = "vapc"
version = "0.0.1"
description = "vapc: Voxel Analysis for Point Clouds"
readme = "README.md"
maintainers = [
    { name = "Ronald Tabernig", email = "ronald.tabernig@uni-heidelberg.de" },
]
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: GIS",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy",
    "laspy[lazrs]>=2.3.0",
    "plyfile",
    "pandas",
    "scipy",
    "toml",
    "ipykernel"
]


# We restrict ourselves to recent Python versions.

# Testing commands for our wheels
# test-command = "pytest {package}/tests/python"
# test-requires = ["pytest"]

# The following is the configuration for the pytest test suite
[tool.pytest.ini_options]
testpaths = [
    "tests"
]
markers = [
    "cmdtest: mark a test as a test of the command line tool."
]
# filterwarnings = [
#     "ignore:The localize method is no longer necessary, as this time zone supports the fold attribute",
#     "ignore:distutils Version classes are deprecated. Use packaging.version instead.",
# ]
